--- a/.github/workflows/docker-new.yml
+++ b/.github/workflows/docker-new.yml
@@ -1,8 +1,24 @@
-- name: Build and push Docker image
-  uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
-  with:
-    context: .
-    file: ./Dockerfile
-    platforms: ${{ matrix.platforms }}
-    push: true
-    outputs: type=image,name=target,annotation-index.org.opencontainers.image.description=zipreport-server image
+name: Build and publish a Docker image to ghcr.io
+
+on: [push, pull_request]
+
+permissions:
+  packages: write
+
+jobs:
+  docker_publish:
+    runs-on: "ubuntu-20.04"
+
+    steps:
+      - uses: actions/checkout@v2
+
+      # https://github.com/marketplace/actions/push-to-ghcr
+      - name: Build and publish a Docker image for ${{ github.repository }}
+        uses: macbre/push-to-ghcr@master
+        with:
+          image_name: ${{ github.repository }}  # it will be lowercased internally
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # optionally push to the Docker Hub (docker.io)
+          # docker_io_token: ${{ secrets.DOCKER_IO_ACCESS_TOKEN }}  # see https://hub.docker.com/settings/security
+          # customize the username to be used when pushing to the Docker Hub
+          # docker_io_user: foobar  # see https://github.com/macbre/push-to-ghcr/issues/14
