--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,7 +3,7 @@ on:
 
   # publish on releases, e.g. v2.1.13 (image tagged as "2.1.13" - "v" prefix is removed)
   release:
-    types: [ published, prereleased ]
+    types: [ published ]
 
   # publish on pushes to the main branch (image tagged as "latest")
   push:
